--- a/public/index.css
+++ b/public/index.css
@@ -5,6 +5,7 @@
     width: 100%;
     margin: 0;
     height: 3rem;
+    z-index: 3;
 }
 
 #nav>h1 {
@@ -22,17 +23,14 @@
 
 body {
     margin: 0;
+    background-color: #f2f2f2;
 }
 
 .input-container {
     position: relative;
 }
 
-#inputarea {
-    z-index: 0;
-}
-
-#jeetit {
+#jeetbutton {
     border: 0px;
     background-color: deepskyblue;
     border-radius: 17px;
@@ -45,26 +43,63 @@ body {
     position: absolute;
     bottom: 10px;
     right: 10px;
-    z-index: 2;
+    outline: none;
 }
+
+#jeetbutton:active {
+    animation-duration: 100ms;
+    background-color: deeppink;
+    animation-name: slidein;
+}
+
+@keyframes slidein {
+    from {
+        background-color: deepskyblue;
+    }
+    to {
+        background-color: deeppink;
+    }
+}
+
+
+/* ##### Posts ##### */
 
 .content {
     display: flex;
     margin-top: 1rem;
+    border-bottom: 2px solid navy;
 }
 
 .recent {
+    background-color: white;
     flex: 2;
-    border: 1px solid red;
+    padding: 1rem;
 }
+
+.recent>h2 {
+    margin: 0;
+    color: lightslategray
+}
+
+
+/* ##### Right sidebar ##### */
 
 .user-profile {
     flex: 1;
-    border: 1px solid green;
+    background-color: dodgerblue;
+    color: white;
+}
+
+#post-count {
+    color: cyan;
 }
 
 .user-profile>* {
     margin-left: 1rem;
+}
+
+.user-profile>p>a {
+    color: white;
 }
 
 #pro-pic {
